--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<groupId>my.own.spring</groupId>
+	<groupId>my.springboot.hello</groupId>
 	<artifactId>springboot-helloworld</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	
 	<name>SpringBoot Hello world</name>
