--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 <!--            <artifactId>spring-cloud-starter-eureka</artifactId> -->
 <!--            <version>1.4.7.RELEASE</version> -->
         </dependency>
+        <!-- config client -->
+        <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
         <!-- File upload client dependencies -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
