--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
 	compile("org.springframework.boot:spring-boot-starter-actuator")
+	compile("org.springframework.boot:spring-boot-starter-security")
 	compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
 	// config client
 	compile("org.springframework.cloud:spring-cloud-starter-config")
