--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ targetCompatibility = 1.8
 
 ext {
 	springCloudVersion = 'Greenwich.RELEASE'
+	springBootAdminVersion = "2.1.6"
  }
 
 dependencies {
@@ -44,6 +45,8 @@ dependencies {
 	compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
 	// config client
 	compile("org.springframework.cloud:spring-cloud-starter-config")
+	// Admin client
+	compile('de.codecentric:spring-boot-admin-starter-client')
     //testCompile("junit:junit")
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 	//file client
@@ -60,5 +63,6 @@ dependencies {
 dependencyManagement {
 	imports {
 	   mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	   mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
 	}
  }
