--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,13 @@ management:
         include: "*"
         
 spring:
+  boot:
+    #Admin server
+    admin:
+      client:
+        url: http://localhost:9090
   cloud:
+    #Config server
     config:
       uri: http://localhost:8888
   application:
