--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,22 @@
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 		</dependency>
+		<!-- Swagger2 - REST API Design/Development/Documentation -->
+		<!-- not part of any starter -->
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<!-- Swagger UI -->
+		<!-- not part of any starter -->
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
         <!-- File upload client dependencies -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
