--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,24 @@
 buildscript {
     ext {
         springBootVersion = "2.1.6.RELEASE"
+		dockerVersion = "1.2"
     }
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("se.transmode.gradle:gradle-docker:${dockerVersion}")
     }
 }
+
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'docker'
 
 group = "my.springboot.hello"
 archivesBaseName = 'helloworld-spring-boot-gradle'
@@ -72,3 +76,15 @@ dependencyManagement {
 	   mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
 	}
  }
+ 
+ task buildDocker(type: Docker, dependsOn: build) {
+	 applicationName = jar.baseName
+	 dockerfile = file('src/main/docker/Dockerfile')
+	 doFirst {
+		copy {
+		   from jar
+		   into stageDir
+		}
+	 }
+ }
+ 
