--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
         <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
+        <docker.image.prefix>spring-boot-tutorialspoint</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -134,6 +135,22 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+            	<groupId>com.spotify</groupId>
+            	<artifactId>docker-maven-plugin</artifactId>
+            	<version>1.0.0</version>
+            	
+            	<configuration>
+            		<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+            		<dockerDirectory>src/main/docker</dockerDirectory>
+            		<resources>
+            			<resource>
+            				<directory>${project.build.directory}</directory>
+            				<include>${project.build.finalName}</include>
+            			</resource>
+            		</resources>
+            	</configuration>
             </plugin>
             
         </plugins>
