--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,9 @@ spring:
     config:
       uri: http://localhost:8888
   application:
-      name: spring_boot_demoservice
+    name: spring_boot_demoservice
+  zipkin:
+    base-url: http://localhost:8123/
       
 server:
    port: 8080
