--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,20 @@
             <artifactId>httpmime</artifactId>
 <!--             <version>4.5.5</version> -->
         </dependency>
+        <!-- Flyway database upgrade -->
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
     </dependencies>
 
    <dependencyManagement>
