--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,11 +33,52 @@ spring:
     name: spring_boot_demoservice
   zipkin:
     base-url: http://localhost:8105/
-      
+  datasource:
+    #spring.datasource.driverClassName = com.mysql.jdbc.Driver
+    driverClassName: com.mysql.jdbc.Driver
+    #spring.datasource.url = jdbc:mysql://localhost:3306/userservice?autoreconnect=true
+    #spring.datasource.url = jdbc:mysql://localhost:3306/USERSERVICE?useTimezone=true&serverTimezone=UTC
+    #spring.datasource.url = jdbc:mysql://localhost:3306/userservice?serverTimezone=UTC&useLegacyDatetimeCode=false
+    url: jdbc:mysql://localhost:3306/userservice?autoreconnect=true
+    #spring.datasource.username = root
+    username: root
+    #spring.datasource.password = MySQLroot
+    password: MySQLroot
+    dbcp2:
+      #spring.datasource.dbcp2.test-on-borrow= true
+      test-on-borrow: true
+      #spring.datasource.dbcp2.test-while-idle= true
+      test-while-idle: true
+      #spring.datasource.dbcp2.time-between-eviction-runs-millis= 60000
+      time-between-eviction-runs-millis: 60000
+      #spring.datasource.dbcp2.min-evictable-idle-time-millis= 30000
+      min-evictable-idle-time-millis: 30000
+      #spring.datasource.dbcp2.validation-query= SELECT 1
+      validation-query: SELECT 1
+      #spring.datasource.dbcp2.max-total= 15
+      max-total: 15
+      #spring.datasource.dbcp2.max-idle= 10
+      max-idle: 10
+      #spring.datasource.dbcp2.max-wait-millis= 8000
+      max-wait-millis: 8000
+  flyway:
+    #spring.flyway.url=jdbc:mysql://localhost:3306/mysql
+    # this solved timeZone problem
+    #spring.flyway.url=jdbc:mysql://localhost:3306/mysql?serverTimezone=UTC&useLegacyDatetimeCode=false
+    url: jdbc:mysql://localhost:3306/mysql?serverTimezone=UTC&useLegacyDatetimeCode=false
+    #spring.flyway.schemas= userservice
+    schemas: userservice
+    #spring.flyway.user= root
+    user: root
+    #spring.flyway.password= MySQLroot
+    password: MySQLroot
+    
 server:
    port: 8080
 #    port: 0 server uses random port number
       
+      
+
 ---
 spring:
    profiles: dev
