--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,8 @@ dependencies {
 	compile('mysql:mysql-connector-java')
 	// email
 	compile('org.springframework.boot:spring-boot-starter-mail')
+	//Hystrix
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-hystrix')
 }
 
 dependencyManagement {
