--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,13 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-mail')
 	//Hystrix
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-hystrix')
+	//WebSocket
+	compile("org.springframework.boot:spring-boot-starter-websocket")
+	compile("org.webjars:webjars-locator:0.30")
+	compile("org.webjars:sockjs-client:1.0.2")
+	compile("org.webjars:stomp-websocket:2.3.3")
+	compile("org.webjars:bootstrap:3.3.7")
+	compile("org.webjars:jquery:3.1.0")
 }
 
 dependencyManagement {
